Batch update of generated files

--- a/home_shortnews.html
+++ b/home_shortnews.html
@@ -81,6 +81,33 @@
     // Example JSON array with news objects
     const newsData = [
   {
+    "title": "Chung tay bảo vệ thương hiệu gạo Việt",
+    "content": "Trong bối cảnh thương hiệu gạo Việt Nam, đặc biệt là gạo ST25, đang bị làm giả và nhái bao bì, nhiều doanh nghiệp trong ngành lúa gạo đã kêu gọi các cơ quan chức năng tăng cường xử lý nghiêm các hành vi này. Các doanh nghiệp cho rằng việc làm giả không chỉ gây thiệt hại cho họ mà còn ảnh hưởng đến uy tín của thương hiệu gạo Việt Nam. Để bảo vệ thương hiệu, các doanh nghiệp cần xây dựng thương hiệu rõ ràng và hợp tác với cơ quan chức năng trong việc xử lý hàng giả.",
+    "link": "https://tuoitre.vn/chung-tay-bao-ve-thuong-hieu-gao-viet-20250324081127455.htm",
+    "cat": "kinh-doanh",
+    "positivity": 6,
+    "importance": 8,
+    "question": "Tại sao việc bảo vệ thương hiệu gạo Việt Nam lại quan trọng?",
+    "answers": [
+      {
+        "text": "Để ngăn chặn hàng giả và bảo vệ uy tín thương hiệu.",
+        "correct": true
+      },
+      {
+        "text": "Để tăng giá gạo xuất khẩu.",
+        "correct": false
+      },
+      {
+        "text": "Để cải thiện năng suất trồng lúa.",
+        "correct": false
+      },
+      {
+        "text": "Để giảm chi phí sản xuất.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Juventus sa thải HLV Motta",
     "content": "Juventus đã chính thức sa thải HLV Thiago Motta và bổ nhiệm Igor Tudor làm HLV mới nhằm cải thiện thành tích đội bóng trong hai tháng cuối mùa giải. Quyết định này được công bố vào tối ngày 23/3, có hiệu lực ngay lập tức. Dưới sự dẫn dắt của Motta, Juventus đã có một mùa giải không thành công với nhiều thất bại, bao gồm các trận thua nặng nề gần đây và việc không đạt được kết quả khả quan ở Champions League.",
     "link": "https://vnexpress.net/juventus-sa-thai-hlv-motta-4864997.html",
@@ -1495,28 +1522,28 @@
     ]
   },
   {
-    "title": "Cấm xe qua hai đường trung tâm TP HCM hơn một tháng",
-    "content": "Trong hơn một tháng tới, xe cộ sẽ bị cấm đi qua hai đường trung tâm TP HCM là Pasteur và Lê Duẩn để phục vụ thi công các hạng mục chuẩn bị cho lễ kỷ niệm 50 năm thống nhất đất nước. Công tác thi công sẽ được chia thành ba giai đoạn, bắt đầu từ nay cho đến ngày 12/5. Các tài xế được khuyến cáo lựa chọn lộ trình thay thế để tránh ùn tắc giao thông.",
-    "link": "https://vnexpress.net/cam-xe-qua-hai-duong-trung-tam-tp-hcm-hon-mot-thang-4864863.html",
+    "title": "Trăm năm đổi thay của quảng trường Đông Kinh Nghĩa Thục",
+    "content": "Quảng trường Đông Kinh Nghĩa Thục, từng là bãi đất trống ven Hồ Gươm, đã trải qua nhiều biến đổi lớn trong suốt một thế kỷ. Từ thời Pháp thuộc, nơi đây trở thành trung tâm giao thông và cũng là nơi diễn ra nhiều sự kiện quan trọng, bao gồm cả những cuộc xử án chính trị. Sau năm 1945, quảng trường được đặt tên để tưởng nhớ đến ngôi trường dạy chữ quốc ngữ và tư tưởng cách mạng. Qua các giai đoạn lịch sử, quảng trường đã trở thành một phần không thể thiếu trong đời sống người dân Hà Nội, nhưng hiện nay đang đối diện với nhiều thách thức trong việc bảo tồn không gian và văn hóa của nó.",
+    "link": "https://vnexpress.net/tram-nam-doi-thay-cua-quang-truong-dong-kinh-nghia-thuc-4864233.html",
     "cat": "thoi-su",
-    "positivity": 6,
-    "importance": 7,
-    "question": "Tại sao xe bị cấm qua đường Pasteur và Lê Duẩn ở TP HCM?",
+    "positivity": 7,
+    "importance": 8,
+    "question": "Quảng trường Đông Kinh Nghĩa Thục đã thay đổi như thế nào qua các thời kỳ?",
     "answers": [
       {
-        "text": "Để thi công chuẩn bị cho lễ kỷ niệm 50 năm thống nhất đất nước.",
+        "text": "Từ bãi đất trống trở thành trung tâm giao thông và điểm đến du lịch",
         "correct": true
       },
       {
-        "text": "Để xây dựng một cầu mới.",
+        "text": "Luôn giữ nguyên hình dạng từ thời Pháp thuộc đến nay",
         "correct": false
       },
       {
-        "text": "Để tổ chức lễ hội âm nhạc.",
+        "text": "Không có sự thay đổi nào đáng kể",
         "correct": false
       },
       {
-        "text": "Vì lý do an ninh quốc gia.",
+        "text": "Chỉ được cải tạo nhẹ nhàng mà không thay đổi chức năng",
         "correct": false
       }
     ]
@@ -1576,28 +1603,28 @@
     ]
   },
   {
-    "title": "Trăm năm đổi thay của quảng trường Đông Kinh Nghĩa Thục",
-    "content": "Quảng trường Đông Kinh Nghĩa Thục, từng là bãi đất trống ven Hồ Gươm, đã trải qua nhiều biến đổi lớn trong suốt một thế kỷ. Từ thời Pháp thuộc, nơi đây trở thành trung tâm giao thông và cũng là nơi diễn ra nhiều sự kiện quan trọng, bao gồm cả những cuộc xử án chính trị. Sau năm 1945, quảng trường được đặt tên để tưởng nhớ đến ngôi trường dạy chữ quốc ngữ và tư tưởng cách mạng. Qua các giai đoạn lịch sử, quảng trường đã trở thành một phần không thể thiếu trong đời sống người dân Hà Nội, nhưng hiện nay đang đối diện với nhiều thách thức trong việc bảo tồn không gian và văn hóa của nó.",
-    "link": "https://vnexpress.net/tram-nam-doi-thay-cua-quang-truong-dong-kinh-nghia-thuc-4864233.html",
+    "title": "Cấm xe qua hai đường trung tâm TP HCM hơn một tháng",
+    "content": "Trong hơn một tháng tới, xe cộ sẽ bị cấm đi qua hai đường trung tâm TP HCM là Pasteur và Lê Duẩn để phục vụ thi công các hạng mục chuẩn bị cho lễ kỷ niệm 50 năm thống nhất đất nước. Công tác thi công sẽ được chia thành ba giai đoạn, bắt đầu từ nay cho đến ngày 12/5. Các tài xế được khuyến cáo lựa chọn lộ trình thay thế để tránh ùn tắc giao thông.",
+    "link": "https://vnexpress.net/cam-xe-qua-hai-duong-trung-tam-tp-hcm-hon-mot-thang-4864863.html",
     "cat": "thoi-su",
-    "positivity": 7,
-    "importance": 8,
-    "question": "Quảng trường Đông Kinh Nghĩa Thục đã thay đổi như thế nào qua các thời kỳ?",
+    "positivity": 6,
+    "importance": 7,
+    "question": "Tại sao xe bị cấm qua đường Pasteur và Lê Duẩn ở TP HCM?",
     "answers": [
       {
-        "text": "Từ bãi đất trống trở thành trung tâm giao thông và điểm đến du lịch",
+        "text": "Để thi công chuẩn bị cho lễ kỷ niệm 50 năm thống nhất đất nước.",
         "correct": true
       },
       {
-        "text": "Luôn giữ nguyên hình dạng từ thời Pháp thuộc đến nay",
+        "text": "Để xây dựng một cầu mới.",
         "correct": false
       },
       {
-        "text": "Không có sự thay đổi nào đáng kể",
+        "text": "Để tổ chức lễ hội âm nhạc.",
         "correct": false
       },
       {
-        "text": "Chỉ được cải tạo nhẹ nhàng mà không thay đổi chức năng",
+        "text": "Vì lý do an ninh quốc gia.",
         "correct": false
       }
     ]
