Batch update of generated files

--- a/home.html
+++ b/home.html
@@ -148,6 +148,37 @@
     // Replace this with your actual news data.
     const newsData = [
   {
+    "title": "Quán cà phê tự phục vụ, đợi nước rồi bưng đi không sang tí nào?",
+    "content": "Bài viết khám phá khái niệm \"sang trọng\" trong văn hóa thưởng thức cà phê, nêu lên câu hỏi liệu sự sang trọng có phụ thuộc vào giá tiền hay hình thức phục vụ. Nhiều người cho rằng trải nghiệm và cách thưởng thức mới là yếu tố quan trọng hơn. Qua đó, bài viết nhấn mạnh rằng cà phê không chỉ là đồ uống mà còn là khoảnh khắc và cảm xúc của người thưởng thức, phản ánh phong cách sống và giá trị cá nhân của mỗi người.",
+    "link": "https://tuoitre.vn/quan-ca-phe-tu-phuc-vu-doi-nuoc-roi-bung-di-khong-sang-ti-nao-20250324075150527.htm",
+    "cat": "giai-tri",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Sang trọng trong thưởng thức cà phê phụ thuộc vào điều gì?",
+    "answers": [
+      {
+        "text": "Cảm xúc và trải nghiệm",
+        "correct": true
+      },
+      {
+        "text": "Giá tiền của ly cà phê",
+        "correct": false
+      },
+      {
+        "text": "Kiểu phục vụ tại quán",
+        "correct": false
+      },
+      {
+        "text": "Nội thất của quán",
+        "correct": false
+      },
+      {
+        "text": "Sự đông đúc của khách hàng",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Chung tay bảo vệ thương hiệu gạo Việt",
     "content": "Trong bối cảnh thương hiệu gạo Việt Nam, đặc biệt là gạo ST25, đang bị làm giả và nhái bao bì, nhiều doanh nghiệp trong ngành lúa gạo đã kêu gọi các cơ quan chức năng tăng cường xử lý nghiêm các hành vi này. Các doanh nghiệp cho rằng việc làm giả không chỉ gây thiệt hại cho họ mà còn ảnh hưởng đến uy tín của thương hiệu gạo Việt Nam. Để bảo vệ thương hiệu, các doanh nghiệp cần xây dựng thương hiệu rõ ràng và hợp tác với cơ quan chức năng trong việc xử lý hàng giả.",
     "link": "https://tuoitre.vn/chung-tay-bao-ve-thuong-hieu-gao-viet-20250324081127455.htm",
