Batch update of generated files

--- a/home.html
+++ b/home.html
@@ -148,6 +148,37 @@
     // Replace this with your actual news data.
     const newsData = [
   {
+    "title": "Bắt người chở 30kg ma túy để lấy tiền công 2.000 USD",
+    "content": "Vào ngày 24 tháng 3, lực lượng biên phòng tỉnh Long An đã bắt giữ Võ Văn Mai, 49 tuổi, khi đang vận chuyển 30kg ma túy, bao gồm Methamphetamine, Ketamine và Heroin, từ Đồng Tháp về TP.HCM. Mai khai nhận đã nhận chuyển ma túy với tiền công 2.000 USD và biết rằng 'đồ' mà mình nhận là ma túy. Hắn bị bắt khi đang di chuyển qua Long An với mật khẩu giao hàng là 'đi Vũng Tàu chơi'.",
+    "link": "https://tuoitre.vn/bat-nguoi-cho-30kg-ma-tuy-de-lay-tien-cong-2-000-usd-2025032411084697.htm",
+    "cat": "phap-luat",
+    "positivity": 1,
+    "importance": 8,
+    "question": "Ai là người bị bắt giữ vì vận chuyển ma túy ở Long An?",
+    "answers": [
+      {
+        "text": "Võ Văn Mai",
+        "correct": true
+      },
+      {
+        "text": "Nguyễn Văn A",
+        "correct": false
+      },
+      {
+        "text": "Trần Thị B",
+        "correct": false
+      },
+      {
+        "text": "Lê Văn C",
+        "correct": false
+      },
+      {
+        "text": "Phạm Văn D",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Quán cà phê tự phục vụ, đợi nước rồi bưng đi không sang tí nào?",
     "content": "Bài viết khám phá khái niệm \"sang trọng\" trong văn hóa thưởng thức cà phê, nêu lên câu hỏi liệu sự sang trọng có phụ thuộc vào giá tiền hay hình thức phục vụ. Nhiều người cho rằng trải nghiệm và cách thưởng thức mới là yếu tố quan trọng hơn. Qua đó, bài viết nhấn mạnh rằng cà phê không chỉ là đồ uống mà còn là khoảnh khắc và cảm xúc của người thưởng thức, phản ánh phong cách sống và giá trị cá nhân của mỗi người.",
     "link": "https://tuoitre.vn/quan-ca-phe-tu-phuc-vu-doi-nuoc-roi-bung-di-khong-sang-ti-nao-20250324075150527.htm",
@@ -174,6 +205,33 @@
       },
       {
         "text": "Sự đông đúc của khách hàng",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Tỉnh Lạng Sơn muốn xây cao tốc nối với Thái Nguyên",
+    "content": "UBND tỉnh Lạng Sơn đã đề nghị Bộ Xây dựng bổ sung vào quy hoạch cao tốc Lạng Sơn - Thái Nguyên, dài 120 km với quy mô 4 làn xe và tốc độ thiết kế từ 80-100 km/h. Tuyến cao tốc này sẽ kết nối cửa khẩu Lạng Sơn với trung tâm công nghiệp Thái Nguyên, giúp giảm tải cho quốc lộ 1B và rút ngắn thời gian di chuyển giữa hai địa phương. Dự kiến tổng mức đầu tư cho dự án lên tới 29.000 tỷ đồng và thời gian triển khai từ 2026 đến 2030.",
+    "link": "https://vnexpress.net/tinh-lang-son-muon-xay-cao-toc-noi-voi-thai-nguyen-4865021.html",
+    "cat": "thoi-su",
+    "positivity": 8,
+    "importance": 9,
+    "question": "Tỉnh Lạng Sơn có kế hoạch xây dựng cao tốc nào nối với Thái Nguyên?",
+    "answers": [
+      {
+        "text": "Cao tốc Lạng Sơn - Thái Nguyên",
+        "correct": true
+      },
+      {
+        "text": "Cao tốc Bắc Giang - Lạng Sơn",
+        "correct": false
+      },
+      {
+        "text": "Cao tốc Hà Nội - Lạng Sơn",
+        "correct": false
+      },
+      {
+        "text": "Cao tốc Thái Nguyên - Bắc Kạn",
         "correct": false
       }
     ]
@@ -318,33 +376,6 @@
     ]
   },
   {
-    "title": "Từng mắc quai bị có vô sinh không?",
-    "content": "Bệnh quai bị có thể gây ra một số biến chứng nghiêm trọng, bao gồm viêm tinh hoàn ở nam giới, đặc biệt là sau tuổi dậy thì, dẫn đến nguy cơ vô sinh. Nếu viêm tinh hoàn xảy ra ở cả hai bên, khả năng sản xuất tinh trùng sẽ suy giảm nghiêm trọng, gây ra tình trạng vô tinh. Trẻ gái cũng có thể bị viêm buồng trứng, nhưng ít khi dẫn đến vô sinh. Để phòng ngừa, việc tiêm vaccine quai bị là rất quan trọng.",
-    "link": "https://vnexpress.net/tung-mac-quai-bi-co-vo-sinh-khong-4865030.html",
-    "cat": "suc-khoe",
-    "positivity": 4,
-    "importance": 8,
-    "question": "Mắc quai bị có thể gây vô sinh không?",
-    "answers": [
-      {
-        "text": "Có, nếu viêm tinh hoàn xảy ra ở cả hai bên.",
-        "correct": true
-      },
-      {
-        "text": "Không, quai bị không ảnh hưởng đến khả năng sinh sản.",
-        "correct": false
-      },
-      {
-        "text": "Có, nhưng chỉ ở trẻ gái.",
-        "correct": false
-      },
-      {
-        "text": "Không, trẻ sẽ luôn có khả năng sinh sản.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "6 món hỗ trợ cải thiện tiêu hóa",
     "content": "Bài viết giới thiệu 6 món ăn hỗ trợ cải thiện tiêu hóa, bao gồm sữa chua, rau xanh đậm, hạt chia, táo, rau thì là và đu đủ. Những thực phẩm này giàu lợi khuẩn, chất xơ và enzyme, giúp tăng cường hệ tiêu hóa, giảm tình trạng táo bón và đầy hơi. Sữa chua chứa probiotic, trong khi rau xanh và hạt chia cung cấp chất xơ cần thiết cho sự hoạt động của đường ruột. Đu đủ với enzyme papain hỗ trợ phân hủy protein, góp phần vào quá trình tiêu hóa.",
     "link": "https://vnexpress.net/6-mon-ho-tro-cai-thien-tieu-hoa-4865045.html",
@@ -425,6 +456,33 @@
       },
       {
         "text": "Chỉ đi bộ trên bề mặt bằng phẳng",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Từng mắc quai bị có vô sinh không?",
+    "content": "Bệnh quai bị có thể gây ra một số biến chứng nghiêm trọng, bao gồm viêm tinh hoàn ở nam giới, đặc biệt là sau tuổi dậy thì, dẫn đến nguy cơ vô sinh. Nếu viêm tinh hoàn xảy ra ở cả hai bên, khả năng sản xuất tinh trùng sẽ suy giảm nghiêm trọng, gây ra tình trạng vô tinh. Trẻ gái cũng có thể bị viêm buồng trứng, nhưng ít khi dẫn đến vô sinh. Để phòng ngừa, việc tiêm vaccine quai bị là rất quan trọng.",
+    "link": "https://vnexpress.net/tung-mac-quai-bi-co-vo-sinh-khong-4865030.html",
+    "cat": "suc-khoe",
+    "positivity": 4,
+    "importance": 8,
+    "question": "Mắc quai bị có thể gây vô sinh không?",
+    "answers": [
+      {
+        "text": "Có, nếu viêm tinh hoàn xảy ra ở cả hai bên.",
+        "correct": true
+      },
+      {
+        "text": "Không, quai bị không ảnh hưởng đến khả năng sinh sản.",
+        "correct": false
+      },
+      {
+        "text": "Có, nhưng chỉ ở trẻ gái.",
+        "correct": false
+      },
+      {
+        "text": "Không, trẻ sẽ luôn có khả năng sinh sản.",
         "correct": false
       }
     ]
@@ -1562,33 +1620,6 @@
     ]
   },
   {
-    "title": "Nghệ sĩ Vũ Thanh thời trẻ lầm lỡ, về già đau đớn nhìn vợ nguy kịch",
-    "content": "Nghệ sĩ Vũ Thanh hiện đang trải qua thời kỳ khó khăn khi vợ ông, ca sĩ Lệ Hải, đang trong tình trạng nguy kịch do nhiều bệnh lý nghiêm trọng. Sau hơn 40 năm gắn bó, ông phải chứng kiến cảnh vợ mình chống chọi với bệnh tật và suy yếu dần. Chi phí điều trị hiện đã vượt quá khả năng tài chính của gia đình, và ông phải vật lộn để kiếm sống trong lúc chăm sóc vợ. Dù vậy, ông vẫn giữ tinh thần lạc quan và không ngừng hy vọng vào sự hồi phục của vợ.",
-    "link": "https://dantri.com.vn/giai-tri/nghe-si-vu-thanh-thoi-tre-lam-lo-ve-gia-dau-don-nhin-vo-nguy-kich-20250321173615479.htm",
-    "cat": "gia-dinh",
-    "positivity": 3,
-    "importance": 7,
-    "question": "Tình trạng sức khỏe của vợ nghệ sĩ Vũ Thanh hiện tại ra sao?",
-    "answers": [
-      {
-        "text": "Vợ ông đang trong tình trạng nguy kịch.",
-        "correct": true
-      },
-      {
-        "text": "Vợ ông đã hồi phục hoàn toàn.",
-        "correct": false
-      },
-      {
-        "text": "Vợ ông đang khỏe mạnh và không có vấn đề gì.",
-        "correct": false
-      },
-      {
-        "text": "Vợ ông chỉ bị cảm lạnh thông thường.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Mẹ 3 con 'lão hóa ngược' sau trút bỏ 27 kg mỡ",
     "content": "Bùi Thị Minh Nguyệt, 28 tuổi, đã giảm 27 kg và 40 cm vòng eo trong gần 1,5 năm nhờ áp dụng chế độ ăn \"eat clean\" và tích cực vận động. Sau khi sinh hai con, Nguyệt đã phải đối mặt với tình trạng béo phì và nhiều vấn đề sức khỏe, nhưng nhờ quyết tâm thay đổi, cô đã đạt được vóc dáng thon gọn và khỏe mạnh hơn. Hiện tại, Nguyệt không chỉ duy trì thói quen ăn uống lành mạnh mà còn trở thành huấn luyện viên dinh dưỡng, giúp đỡ những người khác trong hành trình giảm cân và cải thiện sức khỏe.",
     "link": "https://vnexpress.net/me-3-con-lao-hoa-nguoc-sau-trut-bo-27-kg-mo-4864134.html",
@@ -1615,6 +1646,33 @@
       },
       {
         "text": "10 kg",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Nghệ sĩ Vũ Thanh thời trẻ lầm lỡ, về già đau đớn nhìn vợ nguy kịch",
+    "content": "Nghệ sĩ Vũ Thanh hiện đang trải qua thời kỳ khó khăn khi vợ ông, ca sĩ Lệ Hải, đang trong tình trạng nguy kịch do nhiều bệnh lý nghiêm trọng. Sau hơn 40 năm gắn bó, ông phải chứng kiến cảnh vợ mình chống chọi với bệnh tật và suy yếu dần. Chi phí điều trị hiện đã vượt quá khả năng tài chính của gia đình, và ông phải vật lộn để kiếm sống trong lúc chăm sóc vợ. Dù vậy, ông vẫn giữ tinh thần lạc quan và không ngừng hy vọng vào sự hồi phục của vợ.",
+    "link": "https://dantri.com.vn/giai-tri/nghe-si-vu-thanh-thoi-tre-lam-lo-ve-gia-dau-don-nhin-vo-nguy-kich-20250321173615479.htm",
+    "cat": "gia-dinh",
+    "positivity": 3,
+    "importance": 7,
+    "question": "Tình trạng sức khỏe của vợ nghệ sĩ Vũ Thanh hiện tại ra sao?",
+    "answers": [
+      {
+        "text": "Vợ ông đang trong tình trạng nguy kịch.",
+        "correct": true
+      },
+      {
+        "text": "Vợ ông đã hồi phục hoàn toàn.",
+        "correct": false
+      },
+      {
+        "text": "Vợ ông đang khỏe mạnh và không có vấn đề gì.",
+        "correct": false
+      },
+      {
+        "text": "Vợ ông chỉ bị cảm lạnh thông thường.",
         "correct": false
       }
     ]
@@ -1817,60 +1875,6 @@
     ]
   },
   {
-    "title": "Hàng loạt xe Mitsubishi khuyến mãi lệ phí trước bạ tháng 3",
-    "content": "Mitsubishi đang triển khai chương trình khuyến mãi lệ phí trước bạ cho nhiều mẫu xe trong tháng 3, hỗ trợ từ 50% đến 100% tùy từng sản phẩm. Các mẫu xe như Xpander và Outlander được giảm giá trực tiếp, trong khi mẫu Xforce khuyến mãi phụ kiện. Chương trình này nhằm kích cầu tiêu dùng và cũng tương tự với các hãng xe khác như Honda và Toyota. Mitsubishi ghi nhận doanh số bán tăng 38% so với cùng kỳ năm trước, với Xpander và Xforce là hai mẫu xe bán chạy nhất.",
-    "link": "https://vnexpress.net/hang-loat-xe-mitsubishi-khuyen-mai-le-phi-truoc-ba-thang-3-4864768.html",
-    "cat": "oto-xe-may",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Mitsubishi đang có chương trình khuyến mãi gì trong tháng 3?",
-    "answers": [
-      {
-        "text": "Khuyến mãi lệ phí trước bạ cho nhiều mẫu xe",
-        "correct": true
-      },
-      {
-        "text": "Giảm giá trực tiếp cho tất cả xe",
-        "correct": false
-      },
-      {
-        "text": "Tặng thêm phụ kiện cho các xe mới",
-        "correct": false
-      },
-      {
-        "text": "Không có chương trình khuyến mãi nào",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Ước mơ khỏe mạnh của cậu bé ung thư",
-    "content": "Cậu bé Chí Trung 5 tuổi ở Cà Mau đang điều trị ung thư máu và chỉ được về nhà thăm mẹ ba lần trong gần một năm qua. Mặc dù phải chịu đựng nhiều cơn đau đớn, Trung luôn giữ tinh thần lạc quan và mong muốn được khỏe mạnh để thực hiện ước mơ trở thành công an hoặc bác sĩ. Mẹ cậu, chị Như Ý, đã phải vượt qua nhiều khó khăn, vừa chăm sóc con vừa làm việc để kiếm sống. Chương trình \"Mặt trời Hy vọng\" được tổ chức nhằm hỗ trợ trẻ em có hoàn cảnh khó khăn như Trung.",
-    "link": "https://vnexpress.net/uoc-mo-khoe-manh-cua-cau-be-ung-thu-4864413.html",
-    "cat": "suc-khoe",
-    "positivity": 7,
-    "importance": 8,
-    "question": "Ước mơ của Chí Trung khi khỏe lại là gì?",
-    "answers": [
-      {
-        "text": "Trở thành công an hoặc bác sĩ",
-        "correct": true
-      },
-      {
-        "text": "Trở thành họa sĩ",
-        "correct": false
-      },
-      {
-        "text": "Trở thành cầu thủ bóng đá",
-        "correct": false
-      },
-      {
-        "text": "Trở thành nhạc sĩ",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Trăm năm đổi thay của quảng trường Đông Kinh Nghĩa Thục",
     "content": "Quảng trường Đông Kinh Nghĩa Thục, từng là bãi đất trống ven Hồ Gươm, đã trải qua nhiều biến đổi lớn trong suốt một thế kỷ. Từ thời Pháp thuộc, nơi đây trở thành trung tâm giao thông và cũng là nơi diễn ra nhiều sự kiện quan trọng, bao gồm cả những cuộc xử án chính trị. Sau năm 1945, quảng trường được đặt tên để tưởng nhớ đến ngôi trường dạy chữ quốc ngữ và tư tưởng cách mạng. Qua các giai đoạn lịch sử, quảng trường đã trở thành một phần không thể thiếu trong đời sống người dân Hà Nội, nhưng hiện nay đang đối diện với nhiều thách thức trong việc bảo tồn không gian và văn hóa của nó.",
     "link": "https://vnexpress.net/tram-nam-doi-thay-cua-quang-truong-dong-kinh-nghia-thuc-4864233.html",
@@ -1920,6 +1924,60 @@
       },
       {
         "text": "Vì lý do an ninh quốc gia.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Ước mơ khỏe mạnh của cậu bé ung thư",
+    "content": "Cậu bé Chí Trung 5 tuổi ở Cà Mau đang điều trị ung thư máu và chỉ được về nhà thăm mẹ ba lần trong gần một năm qua. Mặc dù phải chịu đựng nhiều cơn đau đớn, Trung luôn giữ tinh thần lạc quan và mong muốn được khỏe mạnh để thực hiện ước mơ trở thành công an hoặc bác sĩ. Mẹ cậu, chị Như Ý, đã phải vượt qua nhiều khó khăn, vừa chăm sóc con vừa làm việc để kiếm sống. Chương trình \"Mặt trời Hy vọng\" được tổ chức nhằm hỗ trợ trẻ em có hoàn cảnh khó khăn như Trung.",
+    "link": "https://vnexpress.net/uoc-mo-khoe-manh-cua-cau-be-ung-thu-4864413.html",
+    "cat": "suc-khoe",
+    "positivity": 7,
+    "importance": 8,
+    "question": "Ước mơ của Chí Trung khi khỏe lại là gì?",
+    "answers": [
+      {
+        "text": "Trở thành công an hoặc bác sĩ",
+        "correct": true
+      },
+      {
+        "text": "Trở thành họa sĩ",
+        "correct": false
+      },
+      {
+        "text": "Trở thành cầu thủ bóng đá",
+        "correct": false
+      },
+      {
+        "text": "Trở thành nhạc sĩ",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Hàng loạt xe Mitsubishi khuyến mãi lệ phí trước bạ tháng 3",
+    "content": "Mitsubishi đang triển khai chương trình khuyến mãi lệ phí trước bạ cho nhiều mẫu xe trong tháng 3, hỗ trợ từ 50% đến 100% tùy từng sản phẩm. Các mẫu xe như Xpander và Outlander được giảm giá trực tiếp, trong khi mẫu Xforce khuyến mãi phụ kiện. Chương trình này nhằm kích cầu tiêu dùng và cũng tương tự với các hãng xe khác như Honda và Toyota. Mitsubishi ghi nhận doanh số bán tăng 38% so với cùng kỳ năm trước, với Xpander và Xforce là hai mẫu xe bán chạy nhất.",
+    "link": "https://vnexpress.net/hang-loat-xe-mitsubishi-khuyen-mai-le-phi-truoc-ba-thang-3-4864768.html",
+    "cat": "oto-xe-may",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Mitsubishi đang có chương trình khuyến mãi gì trong tháng 3?",
+    "answers": [
+      {
+        "text": "Khuyến mãi lệ phí trước bạ cho nhiều mẫu xe",
+        "correct": true
+      },
+      {
+        "text": "Giảm giá trực tiếp cho tất cả xe",
+        "correct": false
+      },
+      {
+        "text": "Tặng thêm phụ kiện cho các xe mới",
+        "correct": false
+      },
+      {
+        "text": "Không có chương trình khuyến mãi nào",
         "correct": false
       }
     ]
